tests/errors/importMissing.milo
// @error: cannot open
import "nonexistent.milo"

fn main(): i32 {
    return 0
}

